shared/css/pepperlillie-nearby-locations-shared.css
.pl-nearby-locations-container {
    max-width: 95%;
    overflow: auto;
    background-color: #00b54e;
}

.pl-nearby-locations-container .accordion-container {
    width: 25%;
    float: left;
}

.pl-nearby-locations-container .accordion-container a {
    text-decoration: none;
    color: #fff;
    display: block;
}

.pl-nearby-locations-container .accordion-container a:hover,
.pl-nearby-locations-container .accordion-container a:focus {
    text-decoration: none;
}

.pl-nearby-locations-container .accordion-container a.toggle-all {
    padding: 1em .5em 1em .7em;
    font-size: 16px;
    line-height: 1.1;
}

.pl-nearby-locations-container .accordion-container .ui-accordion .ui-accordion-header {
    border-radius: 0;
    background: #00b54e;
    color: #fff;
    text-transform: uppercase;
    margin: 0;
    padding: 1em .5em 1em .7em;
    border: none;
    border-top: 1px solid #fff;
}

.pl-nearby-locations-container .accordion-container .ui-accordion .ui-accordion-header:focus {
    outline: 0;
}

.pl-nearby-locations-container .accordion-container .ui-accordion .ui-accordion-header .ui-icon {
    float: right;
    margin-top: 1px;
}

.pl-nearby-locations-container .accordion-container .ui-accordion .ui-accordion-content {
    border-radius: 0;
    border: none;
    background-color: #038138;
    padding: 1em 0.25em;
}

.pl-nearby-locations-container .accordion-container .ui-accordion .ui-accordion-content ul {
    color: #fff;
    margin-bottom: 0;
}

.pl-nearby-locations-container .accordion-container .ui-accordion .ui-accordion-content ul li a {
    padding: 0.25em 0;
}

.pl-nearby-locations-container .map {
    height: 500px;
    width: 75%;
    float: left;
}

.pl-nearby-locations-container .map img {
    max-width: none;
}

